Set Arr preferred sizes to minimum values

--- a/apps/media/configarr-configmap.yaml
+++ b/apps/media/configarr-configmap.yaml
@@ -20,35 +20,95 @@ data:
         api_key: !secret SONARR_API_KEY
         quality_definition:
           type: series
-          # Looser MB/min caps based on TRaSH/Servarr guidance while avoiding near-unlimited ranges.
           qualities:
-            - quality: "HDTV-720p"
-              preferred: 70
-              max: 110
-            - quality: "WEBDL-720p"
-              preferred: 70
-              max: 110
-            - quality: "WEBRip-720p"
-              preferred: 70
-              max: 110
-            - quality: "Bluray-720p"
-              preferred: 70
-              max: 110
-            - quality: "HDTV-1080p"
-              preferred: 120
-              max: 170
-            - quality: "WEBDL-1080p"
-              preferred: 120
-              max: 170
-            - quality: "WEBRip-1080p"
-              preferred: 120
-              max: 170
             - quality: "Bluray-1080p"
-              preferred: 120
+              min: 50.4
+              preferred: 50.4
               max: 170
             - quality: "Bluray-1080p Remux"
-              preferred: 180
+              min: 69.1
+              preferred: 69.1
               max: 240
+            - quality: "Bluray-2160p"
+              min: 94.6
+              preferred: 94.6
+              max: 1000
+            - quality: "Bluray-2160p Remux"
+              min: 187.4
+              preferred: 187.4
+              max: 1000
+            - quality: "Bluray-480p"
+              min: 2
+              preferred: 2
+              max: 18
+            - quality: "Bluray-576p"
+              min: 2
+              preferred: 2
+              max: 18
+            - quality: "Bluray-720p"
+              min: 17.1
+              preferred: 17.1
+              max: 110
+            - quality: "DVD"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "HDTV-1080p"
+              min: 15
+              preferred: 15
+              max: 170
+            - quality: "HDTV-2160p"
+              min: 25
+              preferred: 25
+              max: 1000
+            - quality: "HDTV-720p"
+              min: 10
+              preferred: 10
+              max: 110
+            - quality: "Raw-HD"
+              min: 0
+              preferred: 0.1
+              max: 35
+            - quality: "SDTV"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "Unknown"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "WEBDL-1080p"
+              min: 15
+              preferred: 15
+              max: 170
+            - quality: "WEBDL-2160p"
+              min: 25
+              preferred: 25
+              max: 1000
+            - quality: "WEBDL-480p"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "WEBDL-720p"
+              min: 10
+              preferred: 10
+              max: 110
+            - quality: "WEBRip-1080p"
+              min: 15
+              preferred: 15
+              max: 170
+            - quality: "WEBRip-2160p"
+              min: 25
+              preferred: 25
+              max: 1000
+            - quality: "WEBRip-480p"
+              min: 2
+              preferred: 2
+              max: 18
+            - quality: "WEBRip-720p"
+              min: 10
+              preferred: 10
+              max: 110
         include:
           - template: sonarr-quality-definition-series
           - template: sonarr-v4-quality-profile-web-1080p
@@ -62,33 +122,126 @@ data:
         quality_definition:
           type: movie
           qualities:
-            - quality: "HDTV-720p"
-              preferred: 70
-              max: 110
-            - quality: "WEBDL-720p"
-              preferred: 70
-              max: 110
-            - quality: "WEBRip-720p"
-              preferred: 70
-              max: 110
-            - quality: "Bluray-720p"
-              preferred: 70
-              max: 110
-            - quality: "HDTV-1080p"
-              preferred: 120
-              max: 170
-            - quality: "WEBDL-1080p"
-              preferred: 120
-              max: 170
-            - quality: "WEBRip-1080p"
-              preferred: 120
-              max: 170
             - quality: "Bluray-1080p"
-              preferred: 120
+              min: 50.8
+              preferred: 50.8
               max: 170
+            - quality: "Bluray-2160p"
+              min: 102
+              preferred: 102
+              max: 2000
+            - quality: "Bluray-480p"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "Bluray-576p"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "Bluray-720p"
+              min: 25.7
+              preferred: 25.7
+              max: 110
+            - quality: "BR-DISK"
+              min: 0
+              preferred: 0.1
+              max: 35
+            - quality: "CAM"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "DVD"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "DVD-R"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "DVDSCR"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "HDTV-1080p"
+              min: 33.8
+              preferred: 33.8
+              max: 170
+            - quality: "HDTV-2160p"
+              min: 85
+              preferred: 85
+              max: 2000
+            - quality: "HDTV-720p"
+              min: 17.1
+              preferred: 17.1
+              max: 110
+            - quality: "Raw-HD"
+              min: 0
+              preferred: 0.1
+              max: 35
+            - quality: "REGIONAL"
+              min: 0
+              preferred: 0.1
+              max: 18
             - quality: "Remux-1080p"
-              preferred: 180
+              min: 102
+              preferred: 102
               max: 240
+            - quality: "Remux-2160p"
+              min: 187.4
+              preferred: 187.4
+              max: 2000
+            - quality: "SDTV"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "TELECINE"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "TELESYNC"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "Unknown"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "WEBDL-1080p"
+              min: 12.5
+              preferred: 12.5
+              max: 170
+            - quality: "WEBDL-2160p"
+              min: 34.5
+              preferred: 34.5
+              max: 2000
+            - quality: "WEBDL-480p"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "WEBDL-720p"
+              min: 12.5
+              preferred: 12.5
+              max: 110
+            - quality: "WEBRip-1080p"
+              min: 12.5
+              preferred: 12.5
+              max: 170
+            - quality: "WEBRip-2160p"
+              min: 34.5
+              preferred: 34.5
+              max: 2000
+            - quality: "WEBRip-480p"
+              min: 0
+              preferred: 0.1
+              max: 18
+            - quality: "WEBRip-720p"
+              min: 12.5
+              preferred: 12.5
+              max: 110
+            - quality: "WORKPRINT"
+              min: 0
+              preferred: 0.1
+              max: 18
         include:
           - template: radarr-quality-definition-movie
           - template: radarr-quality-profile-remux-web-1080p
