Preserve client IP on Traefik load balancers

--- a/apps/system/traefik-helmchartconfig.yaml
+++ b/apps/system/traefik-helmchartconfig.yaml
@@ -51,4 +51,5 @@ spec:
       annotations:
         lbipam.cilium.io/ips: 10.10.20.240
       spec:
+        externalTrafficPolicy: Local
         loadBalancerClass: io.cilium/l2-announcer
