--- a/apps/system/traefik-internal-service.yaml
+++ b/apps/system/traefik-internal-service.yaml
@@ -13,6 +13,7 @@ metadata:
     lbipam.cilium.io/ips: 10.10.20.241
 spec:
   type: LoadBalancer
+  externalTrafficPolicy: Local
   loadBalancerClass: io.cilium/l2-announcer
   ports:
     - name: websecure-int
