--- a/apps/infrastructure/homepage-deployment.yaml
+++ b/apps/infrastructure/homepage-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - name: TZ
               value: "Europe/Amsterdam"
             - name: HOMEPAGE_ALLOWED_HOSTS
-              value: "homepage.romanpeters.nl,homepage.prod.romanpeters.nl"
+              value: "homepage.romanpeters.nl"
             - name: HOMEPAGE_VAR_AUTHENTIK_API_KEY
               valueFrom:
                 secretKeyRef:
