--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -117,6 +117,11 @@ data:
             icon: homebox
             siteMonitor: https://homebox.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Open WebUI:
+            href: https://chat.romanpeters.nl
+            icon: open-webui
+            siteMonitor: https://chat.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
         - Gitea:
             href: https://git.romanpeters.nl
             icon: gitea
