Configure Open WebUI MCP connection to Home Assistant

--- a/apps/gen-ai/kustomization.yaml
+++ b/apps/gen-ai/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: gen-ai
 resources:
   - namespace.yaml
   - dockerhub-read.sops.yaml
+  - openwebui-mcp.sops.yaml
   - default-serviceaccount.yaml
   - openwebui-pvc.yaml
   - openwebui-deployment.yaml
