GitOps-manage OpenWebUI Ollama no-auth connection

--- a/apps/gen-ai/kustomization.yaml
+++ b/apps/gen-ai/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - dockerhub-read.sops.yaml
   - openwebui-mcp.sops.yaml
+  - openwebui-bootstrap-config.yaml
   - default-serviceaccount.yaml
   - openwebui-pvc.yaml
   - openwebui-deployment.yaml
