--- a/apps/media/searxng-ingress.yaml
+++ b/apps/media/searxng-ingress.yaml
@@ -4,14 +4,13 @@ metadata:
   name: searxng
   namespace: media
   annotations:
-    external-dns: external
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
   labels:
     app.kubernetes.io/name: searxng
     app.kubernetes.io/instance: searxng-prod
     app.kubernetes.io/part-of: homelab
     app.kubernetes.io/managed-by: flux
-    exposure: public
+    exposure: internal
 spec:
   ingressClassName: traefik
   rules:
