--- a/apps/media/searxng-service.yaml
+++ b/apps/media/searxng-service.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/instance: searxng-prod
     app.kubernetes.io/part-of: homelab
     app.kubernetes.io/managed-by: flux
-    exposure: public
+    exposure: internal
 spec:
   type: ClusterIP
   selector:
