--- a/apps/general/openwebui-deployment.yaml
+++ b/apps/general/openwebui-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: openwebui
-  namespace: gen-ai
+  namespace: general
   labels:
     app.kubernetes.io/name: openwebui
     app.kubernetes.io/instance: openwebui-prod
