--- a/apps/general/openwebui-ingress.yaml
+++ b/apps/general/openwebui-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: openwebui
-  namespace: gen-ai
+  namespace: general
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
   labels:
