--- a/apps/general/openwebui-pvc.yaml
+++ b/apps/general/openwebui-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: openwebui-data
-  namespace: gen-ai
+  namespace: general
   labels:
     app.kubernetes.io/name: openwebui-data
     app.kubernetes.io/instance: openwebui-data-prod
