--- a/apps/general/openwebui-service.yaml
+++ b/apps/general/openwebui-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: openwebui
-  namespace: gen-ai
+  namespace: general
   labels:
     app.kubernetes.io/name: openwebui
     app.kubernetes.io/instance: openwebui-prod
