--- a/apps/media/searxng-networkpolicy-openwebui.yaml
+++ b/apps/media/searxng-networkpolicy-openwebui.yaml
@@ -19,7 +19,7 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: gen-ai
+              kubernetes.io/metadata.name: general
           podSelector:
             matchLabels:
               app.kubernetes.io/name: openwebui
