Add Cleanuparr to media stack and homepage

--- a/apps/infrastructure/homepage-config.yaml
+++ b/apps/infrastructure/homepage-config.yaml
@@ -215,6 +215,11 @@ data:
             icon: prowlarr
             siteMonitor: https://prowlarr.romanpeters.nl
             siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
+        - Cleanuparr:
+            href: https://cleanuparr.romanpeters.nl
+            icon: cleanuparr
+            siteMonitor: https://cleanuparr.romanpeters.nl
+            siteMonitorExpectedCodes: [200, 301, 302, 303, 307, 308]
     - Infrastructure:
         - Traefik:
             href: https://traefik.romanpeters.nl
