--- a/apps/media/kustomization.yaml
+++ b/apps/media/kustomization.yaml
@@ -11,6 +11,9 @@ resources:
   - configarr-configmap.yaml
   - configarr-secrets.sops.yaml
   - configarr-cronjob.yaml
+  - cleanuparr-deployment.yaml
+  - cleanuparr-service.yaml
+  - cleanuparr-ingress.yaml
   - sonarr-deployment.yaml
   - sonarr-service.yaml
   - sonarr-ingress.yaml
